--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>My Portfolio</title>
-   <link rel="stylesheet" type="text/css" href="stylecss">
+   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
@@ -16,7 +16,7 @@
   <a href="websites.html">websites</a>
   <a href="aboutme.html">about me</a>
 </div>
-<center><img src="img/flowers.png" style=" align: left; width: 800px;"></a></center>
+<center><img src="flowers.png" style=" align: left; width: 800px;"></a></center>
 <h3><center>★,｡･:*:･ﾟ☆welcome☆ﾟ･:*:･｡,★</center></h3>
 <center><p>in this portfolio you will see everything that i have learned being in this course and using what i learned to put it into my webistes. in these websites you will see
   the good and bad in my websites and although i dont have that any websites to display i am proud of the few websites in here and i hope you can see
