--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>My Portfolio</title>
-   <link rel="stylesheet" type="text/css" href="css/style.css">
+   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
@@ -15,7 +15,7 @@
   <a href="websites.html">websites</a>
   <a href="aboutme.html">about me</a>
 </div>
-<center><img src="img/solar.gif" style=" align: left; width: 800px;"></a></center>
+<center><img src="solar.gif" style=" align: left; width: 800px;"></a></center>
 <ul>
   <li>name: alexander galindo</li>
   <li>age: 16</li>
