--- a/websites.html
+++ b/websites.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>My Portfolio</title>
-   <link rel="stylesheet" type="text/css" href="css/style.css">
+   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
@@ -20,7 +20,7 @@
   <h2>My First Website</h2>
   <div class="box">
   <ul>
-        <center><a href="https://codehs.com/editor/html/1233482/820715/index.html"><img src="img/download.jpg" style=" align: left; width: 300px;"></a></center>
+        <center><a href="https://codehs.com/editor/html/1233482/820715/index.html"><img src="download.jpg" style=" align: left; width: 300px;"></a></center>
 
       <center><h3 class="float">my first website: this website was made after learning the basics of html. this website displays some of the many things i like for example
             cartoon characters, songs, and books. it used to have more and the graph was completed until my code erased itself out of no where and i had to turn
@@ -30,7 +30,7 @@
   <h2>New Orleans</h2>
   <div class="box">
   <ul>
-        <center><a href="https://codehs.com/editor/html/1497789/820715/index.html"><img src="img/neworleans.png" style=" align: left; width: 300px;"></a></center>
+        <center><a href="https://codehs.com/editor/html/1497789/820715/index.html"><img src="neworleans.png" style=" align: left; width: 300px;"></a></center>
 
       <center><h3 class="float">this website was made to inform people about the beautiful city of New Orleans. our teacher wnated us to inform people
       about popular cities while also using a dropdown menu in a navigation bar that was also stuck at the top or "sticky." i am also proud of this website because it
@@ -41,7 +41,7 @@
   <h2>Astrology</h2>
   <div class="box">
   <ul>
-        <center><a href="https://codehs.com/editor/html/1370674/820715/index.html"><img src="img/system.png" style=" align: left; width: 300px;"></a></center>
+        <center><a href="https://codehs.com/editor/html/1370674/820715/index.html"><img src="system.png" style=" align: left; width: 300px;"></a></center>
 
       <center><h3 class="float">this one is my favorite website that i have and i am really proud of. in this project we were told to add little animations in pictures or words.
       this project was about something that we enjoy or our "passion." one of the things that i really enjoy learning about is horoscopes and astrology. its really interesting to me
@@ -53,7 +53,7 @@
   <h2>Favorite TV Show</h2>
   <div class="box">
   <ul>
-        <center><a href="https://codehs.com/editor/html/1370674/820715/index.html"><img src="img/butter.gif" style=" align: left; width: 300px;"></a></center>
+        <center><a href="https://codehs.com/editor/html/1370674/820715/index.html"><img src="butter.gif" style=" align: left; width: 300px;"></a></center>
 
       <center><h3 class="float">this one is my favorite website that i have and i am really proud of. in this project we were told to add little animations in pictures or words.
       this project was about something that we enjoy or our "passion." one of the things that i really enjoy learning about is horoscopes and astrology. its really interesting to me
