--- a/websites.html
+++ b/websites.html
@@ -55,10 +55,11 @@
   <ul>
         <center><a href="https://codehs.com/editor/html/1370674/820715/index.html"><img src="butter.gif" style=" align: left; width: 300px;"></a></center>
 
-      <center><h3 class="float">this one is my favorite website that i have and i am really proud of. in this project we were told to add little animations in pictures or words.
-      this project was about something that we enjoy or our "passion." one of the things that i really enjoy learning about is horoscopes and astrology. its really interesting to me
-      that depending on what time and place you were born will affect you and your personality based on the position of the planets stars and sun. and i get more interested when things align
-      with how people act and when their personalities are alike to their zodiac sign</h3></center>
+      <center><h3 class="float">this is another one of my most favorite websites. this website is about one of my favorite shows, the powerpuff girls
+        . in this website we were supposed to make another scrolling one pager about a favorite movie or show and i chose this show because 
+        personally it is very nostalgic to me and i enjoy it a lot. while making this website i learned a lot about this show and about the creator and many other
+        shows that he has created. ive always been intrigued by the pretty visuals that this cartoon had and the cool characters. i grew up with the powerpuff
+        girls and it is one of my favorite shows ever.</h3></center>
 </div>
   <hr>
 </html>
