--- a/websites.html
+++ b/websites.html
@@ -53,7 +53,7 @@
   <h2>Favorite TV Show</h2>
   <div class="box">
   <ul>
-        <center><a href="https://codehs.com/editor/html/1370674/820715/index.html"><img src="butter.gif" style=" align: left; width: 300px;"></a></center>
+        <center><a href="file:///G:/My%20Drive/Intro%20Web%20Design/4-%20Scrolling%20One%20Pager/index.html"><img src="butter.gif" style=" align: left; width: 300px;"></a></center>
 
       <center><h3 class="float">this is another one of my most favorite websites. this website is about one of my favorite shows, the powerpuff girls
         . in this website we were supposed to make another scrolling one pager about a favorite movie or show and i chose this show because 
