--- a/websites.html
+++ b/websites.html
@@ -20,7 +20,9 @@
   <h2>My First Website</h2>
   <div class="box">
   <ul>
-        <center><a href="https://codehs.com/editor/html/1233482/820715/index.html"><img src="download.jpg" style=" align: left; width: 300px;"></a></center>
+      <button onclick="document.getElementById('myImage').src='img/download.jpg'">close mouth</button>
+        <center><a href="https://codehs.com/editor/html/1233482/820715/index.html"><img id="myImage" src="img/download.jpg" style=" align: left; width: 300px;"></a></center>
+    <button onclick="document.getElementById('myImage').src='img/open.png'">open mouth</button>
 
       <center><h3 class="float">my first website: this website was made after learning the basics of html. this website displays some of the many things i like for example
             cartoon characters, songs, and books. it used to have more and the graph was completed until my code erased itself out of no where and i had to turn
