--- a/websites.html
+++ b/websites.html
@@ -22,7 +22,7 @@
   <ul>
       <button onclick="document.getElementById('myImage').src='download.jpg'">close mouth</button>
         <center><a href="https://codehs.com/editor/html/1233482/820715/index.html"><img id="myImage" src="download.jpg" style=" align: left; width: 300px;"></a></center>
-    <button onclick="document.getElementById('myImage').src='open.png'">open mouth</button>
+    <button onclick="document.getElementById('myImage').src='open.png'" style=" align: left; width: 300px;">open mouth</button>
 
       <center><h3 class="float">my first website: this website was made after learning the basics of html. this website displays some of the many things i like for example
             cartoon characters, songs, and books. it used to have more and the graph was completed until my code erased itself out of no where and i had to turn
