--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>My Portfolio</title>
    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-  <button><a href="unit1.html">Unit 1</a></button>
+  <button class="button"><a href="unit1.html">Unit 1</a></button>
 
 </html>
