--- a/websites.html
+++ b/websites.html
@@ -2,6 +2,80 @@
 <html>
 <head>
   <title>My Portfolio</title>
+   <link rel="stylesheet" type="text/css" href="css/style.css">
+   _______________________________________________
+   <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+<div class="header">
+  <h2>My Portfolio</h2>
+  <h6>alexander galindo</h6>
+</div>
+<div id="navbar">
+  <a href="index.html">home</a>
+  <a href="websites.html">websites</a>
+  <a href="aboutme.html">about me</a>
+</div>
+
+    <h2><center>my websites</center></h2>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <h3>My First Website</h3>
+          <button onclick="document.getElementById('myImage').src='img/download.jpg'">close mouth</button>
+              <center><a href="https://codehs.com/editor/html/1233482/820715/index.html"><img id="myImage" src="download.jpg" style=" align: left; width: 300px;"></a></center>
+              <button onclick="document.getElementById('myImage').src='img/open.png'">open mouth</button>
+              <p>my first website: this website was made after learning the basics of html. this website displays some of the many things i like for example
+                cartoon characters, songs, and books.</p>
+          <p> it used to have more and the graph was completed until my code erased itself out of no where and i had to turn
+        that in for a project grade the first marking period of my sophomore year</p>
+        </div>
+
+        <div class="col-sm-4">
+          <h3>City Guide</h3>
+          <center><a href="https://codehs.com/editor/html/1497789/820715/index.html"><img src="neworleans.png" style=" align: left; width: 300px;"></a></center>
+          <p>this website was made to inform people about the beautiful city of New Orleans. our teacher wnated us to inform people
+          about popular cities while also using a dropdown menu in a navigation bar that was also stuck at the top or "sticky."</p>
+          <p>i am also proud of this website because it was my first time using a carousel which displayed a pictures in a mini slideshow. in this project i learned a lot about new orleans and its culture and history and also
+        the best places to eat and stay while visiting.</p>
+        </div>
+
+        <div class="col-sm-4">
+          <h3>Astrology</h3>
+          <center><a href="https://codehs.com/editor/html/1370674/820715/index.html"><img src="system.png" style=" align: left; width: 300px;"></a></center>
+          <p>this one is my favorite website that i have and i am really proud of. in this project we were told to add little animations in pictures or words.
+          this project was about something that we enjoy or our "passion." one of the things that i really enjoy learning about is horoscopes and astrology. </p>
+          <p>its really interesting to me
+          that depending on what time and place you were born will affect you and your personality based on the position of the planets stars and sun. and i get more interested when things align
+          with how people act and when their personalities are alike to their zodiac sign</p>
+        </div>
+
+        <div class="col-sm-4">
+          <h3>Powerpuff Girls</h3>
+            <center><a href="https://codehs.com/editor/html/1370674/820715/index.html"><img src="butter.gif" style=" align: left; width: 300px;"></a></center>
+          <p>in this project we had to make a website wiht our favorite show and mine was the powerpuff girls. the aesthetic and look of the show was really interesting to me.</p>
+          <p>im proud of this website because it looks nice to me and its one that looks sort of like a real website and i especially like the background picture
+          and color scheme</p>
+        </div>
+      </div>
+    </div>
+  </html>  
+
+
+
+
+
+
+<!DOCTYPE HTML>
+<html>
+<head>
+  <title>My Portfolio</title>
    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
