--- a/websites.html
+++ b/websites.html
@@ -17,7 +17,7 @@
   <h6>alexander galindo</h6>
 </div>
 <div id="navbar">
-  <a href="index.html">home</a>
+  <a href="unit1.html">home</a>
   <a href="websites.html">websites</a>
   <a href="aboutme.html">about me</a>
 </div>
