--- a/unit1.html
+++ b/unit1.html
@@ -17,7 +17,7 @@
 </div>
 
 <div id="navbar">
-  <a href="index.html">home</a>
+  <a href="unit1.html">home</a>
   <a href="websites.html">websites</a>
   <a href="aboutme.html">about me</a>
 </div>
