--- a/websites.html
+++ b/websites.html
@@ -24,7 +24,8 @@
 
     <h2><center>my websites</center></h2>
 
-    <div class="container">
+  <div class="box">
+  <div class="container">
       <div class="row">
         <div class="col-sm-4">
           <h3>My First Website</h3>
@@ -36,6 +37,7 @@
           <p> it used to have more and the graph was completed until my code erased itself out of no where and i had to turn
         that in for a project grade the first marking period of my sophomore year</p>
         </div>
+    </div>
 
         <div class="col-sm-4">
           <h3>City Guide</h3>
