--- a/websites.html
+++ b/websites.html
@@ -39,6 +39,7 @@
         </div>
     </div>
 
+    <div class="box">
         <div class="col-sm-4">
           <h3>City Guide</h3>
           <center><a href="https://codehs.com/editor/html/1497789/820715/index.html"><img src="neworleans.png" style=" align: left; width: 300px;"></a></center>
@@ -47,7 +48,9 @@
           <p>i am also proud of this website because it was my first time using a carousel which displayed a pictures in a mini slideshow. in this project i learned a lot about new orleans and its culture and history and also
         the best places to eat and stay while visiting.</p>
         </div>
+    </div>
 
+    <div class="box">
         <div class="col-sm-4">
           <h3>Astrology</h3>
           <center><a href="https://codehs.com/editor/html/1370674/820715/index.html"><img src="system.png" style=" align: left; width: 300px;"></a></center>
@@ -57,7 +60,9 @@
           that depending on what time and place you were born will affect you and your personality based on the position of the planets stars and sun. and i get more interested when things align
           with how people act and when their personalities are alike to their zodiac sign</p>
         </div>
+    </div>
 
+    <div class="box">
         <div class="col-sm-4">
           <h3>Powerpuff Girls</h3>
             <center><a href="https://codehs.com/editor/html/1370674/820715/index.html"><img src="butter.gif" style=" align: left; width: 300px;"></a></center>
@@ -67,4 +72,5 @@
         </div>
       </div>
     </div>
+  </div>
   </html>  
