--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <button class="button"><a href="unit1.html">Unit 1</a></button>
     
   <div class="jumbotron">
-  <h1 class="display-4">Hello, world!</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <h1 class="display-4">Alexander Galindo</h1>
+  <p class="lead">My Portfolio</p>
   <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <p>aaa</p>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="unit1.html" role="button">Learn more</a>
+    <a class="btn btn-primary btn-lg" href="unit1.html" role="button">Unit 1</a>
   </p>
 </div>
   </body>
