--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
   <body>
+    <div class="container">
   <div class="jumbotron">
   <h1 class="display-4">Alexander Galindo</h1>
   <p class="lead">My Portfolio</p>
@@ -20,4 +21,5 @@
   </p>
 </div>
   </body>
+    </div>   
 </html>
