--- a/unit1.html
+++ b/unit1.html
@@ -15,11 +15,19 @@
   <h2>My Portfolio</h2>
   <h6>alexander galindo</h6>
 </div>
-
-<div id="navbar">
-  <a href="unit1.html">home</a>
+  
+<div class="vertical-menu">
+  <a href="unit1.html" class="active">Home</a>
   <a href="websites.html">websites</a>
   <a href="aboutme.html">about me</a>
+  <a href="#">Link 3</a>
+  <a href="#">Link 4</a>
+  <a href="#">Link 5</a>
+  <a href="#">Link 6</a>
+  <a href="#">Link 7</a>
+  <a href="#">Link 8</a>
+  <a href="#">Link 9</a>
+  <a href="#">Link 10</a>
 </div>
 <center><img src="graycloud.png" style=" align: left; width: 800px;"></a></center>
 <h3><center>welcome</center></h3>
