--- a/unit1.html
+++ b/unit1.html
@@ -15,6 +15,17 @@
   <h2>My Portfolio</h2>
   <h6>alexander galindo</h6>
 </div>
+   <div class="container">
+  <div class="jumbotron">
+  <h1 class="display-4">Alexander Galindo</h1>
+  <p class="lead">My Portfolio</p>
+  <hr class="my-4">
+  <p>aaa</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="unit1.html" role="button">Unit 1</a>
+  </p>
+</div>
+  </div>
   
 <div class="vertical-menu">
   <a href="unit1.html" class="active">Home</a>
