--- a/websites.html
+++ b/websites.html
@@ -12,15 +12,17 @@
 </head>
 <body>
 
-<div class="header">
-  <h2>My Portfolio</h2>
-  <h6>alexander galindo</h6>
+<div class="container">
+  <div class="jumbotron">
+  <h1 class="display-4">My Portfolio</h1>
+  <p class="lead">Alexander Galindo</p>
+  <hr class="my-4">
+  <p>aaa</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="unit1.html" role="button">Unit 1</a>
+  </p>
 </div>
-<div id="navbar">
-  <a href="unit1.html">home</a>
-  <a href="websites.html">websites</a>
-  <a href="aboutme.html">about me</a>
-</div>
+  </div>
 
     <h2><center>my websites</center></h2>
 
