--- a/aboutme.html
+++ b/aboutme.html
@@ -10,16 +10,18 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <body>
+<div class="container">
+  <div class="jumbotron">
+  <h1 class="display-4">My Portfolio</h1>
+  <p class="lead">Alexander Galindo</p>
+  <hr class="my-4">
+  <p>aaa</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="unit1.html" role="button">Unit 1</a>
+  </p>
+</div>
+  </div>
 
-<div class="header">
-  <h2>My Portfolio</h2>
-  <h6>alexander galindo</h6>
-</div>
-<div id="navbar">
-  <a href="unit1.html">home</a>
-  <a href="websites.html">websites</a>
-  <a href="aboutme.html">about me</a>
-</div>
 <center><img src="solar.gif" style=" align: left; width: 800px;"></a></center>
 <ul>
   <li>name: alexander galindo</li>
