--- a/unit1.html
+++ b/unit1.html
@@ -17,7 +17,9 @@
   <hr class="my-4">
   <p>aaa</p>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="unit1.html" role="button">Unit 1</a>
+    <a class="btn btn-primary btn-lg" href="unit1.html" role="button">home</a>
+    <a class="btn btn-primary btn-lg" href="websites.html" role="button">websites</a>
+    <a class="btn btn-primary btn-lg" href="aboutme.html" role="button">about me</a>
   </p>
 </div>
   </div>
