--- a/websites.html
+++ b/websites.html
@@ -20,6 +20,8 @@
   <p>aaa</p>
   <p class="lead">
     <a class="btn btn-primary btn-lg" href="unit1.html" role="button">Unit 1</a>
+    <a class="btn btn-primary btn-lg" href="websites.html" role="button">websites</a>
+    <a class="btn btn-primary btn-lg" href="aboutme.html" role="button">about me</a>
   </p>
 </div>
   </div>
