--- a/unit1.html
+++ b/unit1.html
@@ -13,7 +13,7 @@
    <div class="container">
   <div class="jumbotron">
   <h1 class="display-4">My Portfolio</h1>
-  <p class="lead">Alexander Galindo</p>>
+  <p class="lead">Alexander Galindo</p>
   <p class="lead">
     <a class="btn btn-primary btn-lg" href="unit1.html" role="button">home</a>
     <a class="btn btn-primary btn-lg" href="websites.html" role="button">websites</a>
