--- a/unit1.html
+++ b/unit1.html
@@ -15,9 +15,7 @@
   <h1 class="display-4">My Portfolio</h1>
   <p class="lead">Alexander Galindo</p>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="unit1.html" role="button">home</a>
-    <a class="btn btn-primary btn-lg" href="websites.html" role="button">websites</a>
-    <a class="btn btn-primary btn-lg" href="aboutme.html" role="button">about me</a>
+    <a class="btn btn-primary btn-lg" href="index.html" role="button">home</a>
   </p>
 </div>
   </div>
