--- a/websites.html
+++ b/websites.html
@@ -20,11 +20,14 @@
   <p>aaa</p>
   <p class="lead">
     <a class="btn btn-primary btn-lg" href="unit1.html" role="button">Unit 1</a>
-    <a class="btn btn-primary btn-lg" href="websites.html" role="button">websites</a>
-    <a class="btn btn-primary btn-lg" href="aboutme.html" role="button">about me</a>
   </p>
 </div>
   </div>
+  <div class="vertical-menu">
+  <a href="unit1.html" class="active">Home</a>
+  <a href="websites.html">websites</a>
+  <a href="aboutme.html">about me</a>
+</div>
 
     <h2><center>my websites</center></h2>
 
