--- a/unit1.html
+++ b/unit1.html
@@ -11,11 +11,11 @@
 </head>
 <body>
    <div class="container">
-  <div class="jumbotron">
+  <div class="jumbotron" style="background-color:bbd5fc;">
   <h1 class="display-4">My Portfolio</h1>
   <p class="lead">Alexander Galindo</p>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="index.html" role="button">home</a>
+    <a class="btn btn-primary btn-lg" href="index.html" role="button">Home</a>
   </p>
 </div>
   </div>
