--- a/unit1.html
+++ b/unit1.html
@@ -11,7 +11,7 @@
 </head>
 <body>
    <div class="container">
-  <div class="jumbotron" style="background-color:#bbd5fc;">
+  <div class="jumbotron" style="background-color:#bbd5fc; color: white;">
   <h1 class="display-4">My Portfolio</h1>
   <p class="lead">Alexander Galindo</p>
   <p class="lead">
