--- a/unit1.html
+++ b/unit1.html
@@ -21,7 +21,7 @@
   </div>
   
 <div class="vertical-menu">
-  <a href="unit1.html" class="active">Home</a>
+  <a href="unit1.html">Home</a>
   <a href="websites.html">websites</a>
   <a href="aboutme.html">about me</a>
 </div>
