--- a/websites.html
+++ b/websites.html
@@ -13,7 +13,7 @@
 <body>
 
 <div class="container">
-  <div class="jumbotron">
+  <div class="jumbotron" style="background-color:#bbd5fc; color: white;">
   <h1 class="display-4">My Portfolio</h1>
   <p class="lead">Alexander Galindo</p>
   <p class="lead">
