--- a/websites.html
+++ b/websites.html
@@ -33,9 +33,9 @@
       <div class="row">
         <div class="col-sm-4">
           <h3>My First Website</h3>
-          <button onclick="document.getElementById('myImage').src='img/download.jpg'">close mouth</button>
+          <button onclick="document.getElementById('myImage').src='download.jpg'">close mouth</button>
               <center><a href="https://codehs.com/editor/html/1233482/820715/index.html"><img id="myImage" src="download.jpg" style=" align: left; width: 300px;"></a></center>
-              <button onclick="document.getElementById('myImage').src='img/open.png'">open mouth</button>
+              <button onclick="document.getElementById('myImage').src='open.png'">open mouth</button>
               <p>my first website: this website was made after learning the basics of html. this website displays some of the many things i like for example
                 cartoon characters, songs, and books.</p>
           <p> it used to have more and the graph was completed until my code erased itself out of no where and i had to turn
