--- a/aboutme.html
+++ b/aboutme.html
@@ -24,9 +24,10 @@
   <a href="websites.html">websites</a>
   <a href="aboutme.html">about me</a>
 </div>
-
+<img src="51701618_1516858755113895_4176889288487201895_n.jpg">
 <ul>
-  <li>name: alexander galindo</li>
+  <li>name: alexander galindo</li>.
+  <img
   <li>age: 16</li>
   <li>birthday: july 27 2019</li>
 </ul>
