--- a/aboutme.html
+++ b/aboutme.html
@@ -24,7 +24,8 @@
   <a href="websites.html">websites</a>
   <a href="aboutme.html">about me</a>
 </div>
-<img src="51701618_1516858755113895_4176889288487201895_n.jpg">
+  
+  <box><img src="51701618_1516858755113895_4176889288487201895_n.jpg" height="200px"></box>
 <ul>
   <li>name: alexander galindo</li>.
   <img
