--- a/aboutme.html
+++ b/aboutme.html
@@ -25,7 +25,8 @@
   <a href="aboutme.html">about me</a>
 </div>
   
-  <box><img src="51701618_1516858755113895_4176889288487201895_n.jpg" height="200px"></box>
+  <center><img src="51701618_1516858755113895_4176889288487201895_n.jpg" height="400px"></center>
+  
 <ul>
   <li>name: alexander galindo</li>.
   <img
