--- a/aboutme.html
+++ b/aboutme.html
@@ -25,7 +25,7 @@
   <a href="aboutme.html">about me</a>
 </div>
   
-  <center><img src="51701618_1516858755113895_4176889288487201895_n.jpg" height="400px" align="left"></center>
+  <center><img src="51701618_1516858755113895_4176889288487201895_n.jpg" height="400px"></center>
   <p>sdad dfsg aeg eg s ergergwrg  sf</p>
   
 <ul>
