--- a/aboutme.html
+++ b/aboutme.html
@@ -26,12 +26,8 @@
 </div>
   
   <center><img src="51701618_1516858755113895_4176889288487201895_n.jpg" height="400px"></center>
-  <p>sdad dfsg aeg eg s ergergwrg  sf</p>
-  
-<ul>
-  <li>name: alexander galindo</li>.
-  <img
-  <li>age: 16</li>
-  <li>birthday: july 27 2019</li>
-</ul>
+  <center><u>About Me</u></center>
+  <center>My name is Alexander Galindo and I am 16 years old as of July 27. I am currently in my second year of the web design program.
+  During my two years being in this program I created a few websites based on what our teacher wanted it to be about. This website will be my portfolio where 
+  you will see everything that I worked on and created. You will also be able to see my current interest on this page.</center>
 </html>
