--- a/aboutme.html
+++ b/aboutme.html
@@ -27,8 +27,8 @@
   
   <center><img src="51701618_1516858755113895_4176889288487201895_n.jpg" height="400px"></center>
   <div class="container">
-  <center><u>About Me</u></center>
-  <center style="font-size: 34px; "><p>My name is Alexander Galindo and I am 16 years old as of July 27. I am currently in my second year of the web design program.
+  <center style="font-size: 25px; "><u>About Me</u></center>
+  <center style="font-size: 20px; "><p>My name is Alexander Galindo and I am 16 years old as of July 27. I am currently in my second year of the web design program.
   During my two years being in this program I created a few websites based on what our teacher wanted it to be about. This website will be my portfolio where 
   you will see everything that I worked on and created. You will also be able to see my current interest on this page.</p></center>
   </div>
