--- a/unit1.html
+++ b/unit1.html
@@ -26,10 +26,11 @@
   <a href="aboutme.html">about me</a>
 </div>
 <center><img src="graycloud.png" style=" align: left; width: 800px;"></a></center>
+  <div class="container">
 <h3><center>welcome</center></h3>
 <center><p>in this portfolio you will see everything that i have learned being in this course and using what i learned to put it into my webistes. in these websites you will see
   the good and bad in my websites and although i dont have that any websites to display i am proud of the few websites in here and i hope you can see
 the work that i put into them. </p></center>
-
+  </div>
 </body>
 </html>
