--- a/unit1.html
+++ b/unit1.html
@@ -27,8 +27,8 @@
 </div>
 <center><img src="graycloud.png" style=" align: left; width: 800px;"></a></center>
   <div class="container">
-<h3><center>welcome</center></h3>
-<center><p>in this portfolio you will see everything that i have learned being in this course and using what i learned to put it into my webistes. in these websites you will see
+<h3><center style="font-size: 25px;">welcome</center></h3>
+<center><p style="font-size: 20px;">in this portfolio you will see everything that i have learned being in this course and using what i learned to put it into my webistes. in these websites you will see
   the good and bad in my websites and although i dont have that any websites to display i am proud of the few websites in here and i hope you can see
 the work that i put into them. </p></center>
   </div>
