--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
-  <body style="background-img:galaxy.jpg;">
+  <body background="galaxy.jpg">
     <div class="container">
   <div class="jumbotron">
   <h1 class="display-4">Alexander Galindo</h1>
