--- a/unit1.html
+++ b/unit1.html
@@ -29,7 +29,11 @@
   <div class="container">
 <h3><center style="font-size: 25px;">Welcome</center></h3>
 <center><p style="font-size: 20px;"> This is my portfolio. In my porfolio you will see everything I that I worked on
-  and learn a little mora about me and what I like and know how to do in coding.</p></center>
+  and learn a little more about me and what I like and know how to do in coding.</p>
+  <p>During my first year of web design I was taught by my teacher Mr.Schreiner and he did a pretty good job of teaching us what 
+  to do when making our own websites. When you go see my websites you will be able to tell the difference and see how my style or way
+  of coding has changed in many different ways. My coding changed because I was able to learn so much more about coding and 
+  adding new elements to my websites.</p></center>
   </div>
 </body>
 </html>
