--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
   <body background="galaxy.jpg">
     <div class="container">
-  <div class="jumbotron">
+  <div class="jumbotron" style="background-color:#341845; color:white;">
   <h1 class="display-4">Alexander Galindo</h1>
   <p class="lead">My Portfolio</p>
 </div>
