--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <p class="lead">My Portfolio</p>
 </div>
       <p class="lead">
-    <a class="btn btn-primary btn-lg" href="unit1.html" role="button">Unit 1</a>
+    <a class="btn btn-primary btn-lg" href="unit1.html" role="button" style="background-color:white; color:white;">Unit 1</a>
   </p>
   </div>      
   </body>
