--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body background="galaxy.jpg">
     <div class="container">
   <div class="jumbotron" style="background-color:#341845; color:white;">
-  <h1 class="display-4">Alexander Galindo</h1>
-  <p class="lead">My Portfolio</p>
+  <h1 class="display-4">My Portfolio</h1>
+  <p class="lead">Alexander Galindo</p>
 </div>
       <p class="lead">
     <a class="btn btn-primary btn-lg" href="unit1.html" role="button" style="background-color:white; color:white;">Unit 1</a>
