--- a/unit1.html
+++ b/unit1.html
@@ -35,5 +35,39 @@
   of coding has changed in many different ways. My coding changed because I was able to learn so much more about coding and 
   adding new elements to my websites.</p></center>
   </div>
+    <hr>
+		<table border="8">
+		    <thead>
+		    <h3>List Of Favorites</h3>
+		        <th>😊</th>
+		        <th>- 1 -</th>
+		        <th>- 2 -</th>
+		        <th>- 3 -</th>
+		        <th>- 4 -</th>
+		        <th>- 5 -</th>
+		    </thead>
+        <tbody id="table">
+        <tr>
+		        <td>Food</td>
+		        <td></td>
+		        <td></td>
+		        <td></td>
+		        <td></td>
+		        <td></td>
+       </tr>
+                <td>Movie</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+        <tr>
+                <td>Ice Cream</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+        </tr>
 </body>
 </html>
