--- a/aboutme.html
+++ b/aboutme.html
@@ -47,7 +47,7 @@
         <tbody id="table">
         <tr>
 		        <td>Food</td>
-		        <td></td>
+		        <td><img src="ramen.png"></td>
 		        <td></td>
 		        <td></td>
 		        <td></td>
