--- a/aboutme.html
+++ b/aboutme.html
@@ -34,6 +34,7 @@
   </div>
   
   <hr>
+	<center>
 		<table border="8">
 		    <thead>
 		    <h3>List Of Favorites</h3>
@@ -47,7 +48,7 @@
         <tbody id="table">
         <tr>
 		        <td>Food</td>
-		        <td><img src="ramen.png"></td>
+		        <td><img src="ramen.png" width="600px"></td>
 		        <td></td>
 		        <td></td>
 		        <td></td>
@@ -67,4 +68,5 @@
                 <td></td>
                 <td></td>
         </tr>
+			</center>
 </html>
