--- a/websites.html
+++ b/websites.html
@@ -13,7 +13,7 @@
 <body>
  <div class="container">
   <div class="jumbotron" style="background-image: url(https://ak8.picdn.net/shutterstock/videos/1357738/thumb/1.jpg); background-size: 100%; color: white;">
-  <h1 class="display-4">My Portfolio</h1>
+  <h1 class="display-4" style="font-style:italic;">My Portfolio</h1>
   <p class="lead">Alexander Galindo</p>
   <p class="lead">
     <a class="btn btn-primary btn-lg" href="index.html" role="button" style="background-color:#cce0fc;">Home</a>
