--- a/aboutme.html
+++ b/aboutme.html
@@ -49,13 +49,14 @@
         <tr>
 		        <td>Food</td>
 		        <td><img src="ramen.png" width="600px"></td>
-		        <td></td>
+		        <td>I love ramen because of all the really good stuff inside of it and i love it with pork belly
+		and I love the taste of the soft boiled egg and it is the best food to eat during cold weather</td>
 		        <td></td>
 		        <td></td>
 		        <td></td>
        </tr>
                 <td>Movie</td>
-                <td></td>
+                <td><img src="mew.jpg"</td>
                 <td></td>
                 <td></td>
                 <td></td>
