--- a/aboutme.html
+++ b/aboutme.html
@@ -49,7 +49,7 @@
         <tr>
 		        <td>Food</td>
 		        <td><img src="ramen.png" width="600px"></td>
-		        <td>I love ramen because of all the really good stuff inside of it and i love it with pork belly
+		        <td style="font-size: 30px; color:#a6c2ff; font-style:italic;">I love ramen because of all the really good stuff inside of it and i love it with pork belly
 		and I love the taste of the soft boiled egg and it is the best food to eat during cold weather</td>
 		        <td></td>
 		        <td></td>
