--- a/aboutme.html
+++ b/aboutme.html
@@ -63,7 +63,7 @@
                 <td></td>
         <tr>
                 <td>Ice Cream</td>
-                <td></td>
+                <td><img src="cookie.png"></td>
                 <td></td>
                 <td></td>
                 <td></td>
