--- a/aboutme.html
+++ b/aboutme.html
@@ -40,10 +40,7 @@
 		    <h3>List Of Favorites</h3>
 		        <th>Color</th>
 		        <th>- 1 -</th>
-		        <th>- 2 -</th>
-		        <th>- 3 -</th>
-		        <th>- 4 -</th>
-		        <th>- 5 -</th>
+		        <th style="font-size: 30px; color:#a6c2ff; font-style:italic;">- 2 -</th>
 		    </thead>
         <tbody id="table">
         <tr>
@@ -51,23 +48,17 @@
 		        <td><img src="ramen.png" width="600px"></td>
 		        <td style="font-size: 30px; color:#a6c2ff; font-style:italic;">I love ramen because of all the really good stuff inside of it and i love it with pork belly
 		and I love the taste of the soft boiled egg and it is the best food to eat during cold weather</td>
-		        <td></td>
-		        <td></td>
-		        <td></td>
+
        </tr>
                 <td>Movie</td>
                 <td><img src="mew.jpg"</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td style="font-size: 30px; color:#a6c2ff; font-style:italic;"></td>
+          
         <tr>
                 <td>Ice Cream</td>
                 <td><img src="cookie.png"></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td style="font-size: 30px; color:#a6c2ff; font-style:italic;"></td>
+
         </tr>
 			</center>
 </html>
