--- a/aboutme.html
+++ b/aboutme.html
@@ -52,12 +52,16 @@
        </tr>
                 <td>Movie</td>
                 <td><img src="mew.jpg"</td>
-                <td style="font-size: 30px; color:#a6c2ff; font-style:italic;"></td>
+                <td style="font-size: 30px; color:#a6c2ff; font-style:italic;"> This was my favorite movie as a kid and it still is. 
+		The animation and the drawing of all the pokemons is so amazing looking to me and not to mention its pretty sad. You 
+		didn't watch the movie if you didn't cry when Ash turned to stone. </td>
           
         <tr>
                 <td>Ice Cream</td>
                 <td><img src="cookie.png"></td>
-                <td style="font-size: 30px; color:#a6c2ff; font-style:italic;"></td>
+                <td style="font-size: 30px; color:#a6c2ff; font-style:italic;"> Cookie dough is the best ice cream ever. You can taste the flavor
+		of the vanilla mixed with pieces of chocolate and cookie dough pieces. Not to mention the best cookie which is chocolate
+		chip and the two combined together on the scrumptious waffle cone is amazing. </td>
 
         </tr>
 			</center>
