--- a/aboutme.html
+++ b/aboutme.html
@@ -39,7 +39,7 @@
 		    <thead>
 		    <h3>List Of Favorites</h3>
 		        <th>Color</th>
-		        <th>- 1 -</th>
+		        <th><img src="sating.jfif"></th>
 		        <th style="font-size: 30px; color:#a6c2ff; font-style:italic;">- 2 -</th>
 		    </thead>
         <tbody id="table">
