--- a/aboutme.html
+++ b/aboutme.html
@@ -39,8 +39,10 @@
 		    <thead>
 		    <h3>List Of Favorites</h3>
 		        <th>Color</th>
-		        <th><img src="sating.jfif"></th>
-		        <th style="font-size: 30px; color:#a6c2ff; font-style:italic;">- 2 -</th>
+		        <th><img src="satin.jfif"></th>
+		        <th style="font-size: 30px; color:#a6c2ff; font-style:italic;"> Baby blue is my favorite color beacause of how
+			    cold yet warm it looks. Its a really nice color to look at and a nice color that is associated with a lot
+			    of nice things like the sky.</th>
 		    </thead>
         <tbody id="table">
         <tr>
