--- a/aboutme.html
+++ b/aboutme.html
@@ -35,7 +35,7 @@
   
   <hr>
 	<center>
-		<table class="table" border="8">
+		<table class="table" border="8" width="800px">
 		    <thead>
 		    <h3>List Of Favorites</h3>
 		        <th>Color</th>
