--- a/aboutme.html
+++ b/aboutme.html
@@ -34,6 +34,7 @@
   </div>
   
   <hr>
+	<div class="container">
 	<center>
 		<table class="table" border="8" width="800px">
 		    <thead>
@@ -67,4 +68,5 @@
 
         </tr>
 			</center>
+		</div>
 </html>
