--- a/aboutme.html
+++ b/aboutme.html
@@ -41,7 +41,7 @@
 		    <h3>List Of Favorites</h3>
 		        <th>Color</th>
 		        <th><img src="satin.jfif"></th>
-		        <th style="font-size: 30px; color:#a6c2ff; font-style:italic;"> Baby blue is my favorite color beacause of how
+		        <th style="font-size: 30px;  font-style:italic;"> Baby blue is my favorite color beacause of how
 			    cold yet warm it looks. Its a really nice color to look at and a nice color that is associated with a lot
 			    of nice things like the sky.</th>
 		    </thead>
@@ -49,20 +49,20 @@
         <tr>
 		        <td>Food</td>
 		        <td><img src="ramen.png" width="600px"></td>
-		        <td style="font-size: 30px; color:#a6c2ff; font-style:italic;">I love ramen because of all the really good stuff inside of it and i love it with pork belly
+		        <td style="font-size: 30px;  font-style:italic;">I love ramen because of all the really good stuff inside of it and i love it with pork belly
 		and I love the taste of the soft boiled egg and it is the best food to eat during cold weather</td>
 
        </tr>
                 <td>Movie</td>
                 <td><img src="mew.jpg"</td>
-                <td style="font-size: 30px; color:#a6c2ff; font-style:italic;"> This was my favorite movie as a kid and it still is. 
+                <td style="font-size: 30px; font-style:italic;"> This was my favorite movie as a kid and it still is. 
 		The animation and the drawing of all the pokemons is so amazing looking to me and not to mention its pretty sad. You 
 		didn't watch the movie if you didn't cry when Ash turned to stone. </td>
           
         <tr>
                 <td>Ice Cream</td>
                 <td><img src="cookie.png"></td>
-                <td style="font-size: 30px; color:#a6c2ff; font-style:italic;"> Cookie dough is the best ice cream ever. You can taste the flavor
+                <td style="font-size: 30px; font-style:italic;"> Cookie dough is the best ice cream ever. You can taste the flavor
 		of the vanilla mixed with pieces of chocolate and cookie dough pieces. Not to mention the best cookie which is chocolate
 		chip and the two combined together on the scrumptious waffle cone is amazing. </td>
 
