--- a/aboutme.html
+++ b/aboutme.html
@@ -40,7 +40,7 @@
 		    <thead>
 		    <h3>List Of Favorites</h3>
 		        <th>Color</th>
-		        <th><img src="satin.jfif"></th>
+		        <th><img src="satin.jfif" class="pic"></th>
 		        <th style="font-size: 30px;  font-style:italic;"> Baby blue is my favorite color beacause of how
 			    cold yet warm it looks. Its a really nice color to look at and a nice color that is associated with a lot
 			    of nice things like the sky.</th>
