--- a/aboutme.html
+++ b/aboutme.html
@@ -48,7 +48,7 @@
         <tbody id="table">
         <tr>
 		        <td>Food</td>
-		        <td><img src="ramen.png" width="600px"></td>
+		        <td><img src="ramen.png" class="pic" width="600px"></td>
 		        <td style="font-size: 30px;  font-style:italic;">I love ramen because of all the really good stuff inside of it and i love it with pork belly
 		and I love the taste of the soft boiled egg and it is the best food to eat during cold weather</td>
 
