--- a/websites.html
+++ b/websites.html
@@ -45,7 +45,7 @@
    
         <div class="col-sm-4">
           <h3>City Guide</h3>
-          <center><a href="https://codehs.com/editor/html/1497789/820715/index.html"><img src="neworleans.png" style=" align: left; width: 300px; hover: height: 310px; width: 310px; filter: brightness(150%);"></a></center>
+          <center><a href="https://codehs.com/editor/html/1497789/820715/index.html"><img class="pic" src="neworleans.png" style=" align: left; width: 300px;"></a></center>
           <p>this website was made to inform people about the beautiful city of New Orleans. our teacher wnated us to inform people
           about popular cities while also using a dropdown menu in a navigation bar that was also stuck at the top or "sticky."</p>
           <p>i am also proud of this website because it was my first time using a carousel which displayed a pictures in a mini slideshow. in this project i learned a lot about new orleans and its culture and history and also
