--- a/clockk.html
+++ b/clockk.html
@@ -19,6 +19,23 @@
 		</style>
 </head>
 <body>
+	<div class="container">
+  <div class="jumbotron" style="background-image: url(https://ak8.picdn.net/shutterstock/videos/1357738/thumb/1.jpg); background-size: 100%; color: white;">
+  <h1 class="display-4" style="font-style:italic;">My Portfolio</h1>
+  <p class="lead">Alexander Galindo</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="index.html" role="button" style="background-color:#cce0fc;">Home</a>
+  </p>
+</div>
+  </div>
+  
+<div class="vertical-menu">
+  <a href="unit1.html">Home</a>
+  <a href="websites.html">websites</a>
+  <a href="aboutme.html">about me</a>
+  <a href="clockk.html">clock</a>
+</div>
+	
 <div id="MyClockDisplay" class="clock"></div>
 <script type="text/javascript">
 
