--- a/clockk.html
+++ b/clockk.html
@@ -4,16 +4,16 @@
 <title>JS - Digital Clock</title>
 <style type="text/css">
 		body{
-			background: #000;
+			background: white;
 		}
 		.clock{
 			position: absolute;
 			top: 50%;
 			left: 50%;
 			transform: translateX(-50%) translateY(-50%);
-			color: pink;
+			color: #b0ceff;
 			font-size: 80px;
-			border: 1px solid pink;
+			border: 1px solid #b0ceff;
 			padding: 0px 5px 0px 5px;
 		}
 		</style>
