--- a/aboutme.html
+++ b/aboutme.html
@@ -23,6 +23,7 @@
   <a href="unit1.html" class="active">Home</a>
   <a href="websites.html">websites</a>
   <a href="aboutme.html">about me</a>
+   <a href="clockk.html">clock</a>
 </div>
   
   <center><img src="51701618_1516858755113895_4176889288487201895_n.jpg" height="400px"></center>
