--- a/unit1.html
+++ b/unit1.html
@@ -25,6 +25,7 @@
   <a href="websites.html">websites</a>
   <a href="aboutme.html">about me</a>
   <a href="clockk.html">clock</a>
+  <a href="tipcalculator.html">tip calculator</a>
 </div>
    <div class="container">
 <h3><center style="font-size: 25px;">Welcome</center></h3>
