--- a/unit1.html
+++ b/unit1.html
@@ -26,6 +26,7 @@
   <a href="aboutme.html">about me</a>
   <a href="clockk.html">clock</a>
   <a href="tipcalculator.html">tip calculator</a>
+  <a href="todo.html">to do list</a>
 </div>
    <div class="container">
 <h3><center style="font-size: 25px;">Welcome</center></h3>
