--- a/unit1.html
+++ b/unit1.html
@@ -27,6 +27,7 @@
   <a href="clockk.html">clock</a>
   <a href="tipcalculator.html">tip calculator</a>
   <a href="todo.html">to do list</a>
+  <a href="https://121agalindocardozo.github.io/portfolio2/">resume</a>
 </div>
    <div class="container">
 <h3><center style="font-size: 25px;">Welcome</center></h3>
