--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
+  <style>
+    .vertical-menu {
+  width: 200px;
+  height: 150px;
+  overflow-y: auto;
+}</style>
+  
 <body>
    <div class="container">
   <div class="jumbotron" style="background-image: url(https://ak8.picdn.net/shutterstock/videos/1357738/thumb/1.jpg); background-size: 100%; color: white;">
