--- a/index.html
+++ b/index.html
@@ -14,7 +14,24 @@
   width: 200px;
   height: 150px;
   overflow-y: auto;
-}</style>
+}
+  .vertical-menu a {
+  background-color: #eee;
+  color: black;
+  display: block;
+  padding: 12px;
+  text-decoration: none;
+}
+
+.vertical-menu a:hover {
+  background-color: #ccc;
+}
+
+.vertical-menu a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+  </style>
   
 <body>
    <div class="container">
