--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
   <a href="tipcalculator.html">tip calculator</a>
   <a href="todo.html">to do list</a>
   <a href="https://121agalindocardozo.github.io/portfolio2/">resume</a>
+  <a href="https://121agalindocardozo.github.io/japan/">travel site</a>
 </div>
    <div class="container">
 <h3><center style="font-size: 25px;">Welcome</center></h3>
