--- a/colorguess.html
+++ b/colorguess.html
@@ -75,6 +75,17 @@ for (var i = 0; i < buttons.length, i++) {
   var red = makeColourValue();
 </javascript>
 <body>
+    <div class="vertical-menu">
+  <a href="unit1.html">Home</a>
+  <a href="websites.html">websites</a>
+  <a href="aboutme.html">about me</a>
+  <a href="clockk.html">clock</a>
+  <a href="tipcalculator.html">tip calculator</a>
+  <a href="todo.html">to do list</a>
+  <a href="https://121agalindocardozo.github.io/portfolio2/">resume</a>
+  <a href="https://121agalindocardozo.github.io/japan/">travel site</a>
+  <a href="colorguess.html">Guess The Color</a>
+</div>
     <h1>Guess the colour!</h1>
     <h2 id="colourValue"></h2>
     <div id="buttonWrapper">
